# rewriter

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
src/: backup.rs  interface.rs  lib.rs  proc_macro2_impl.rs  rewriter.rs  span.rs
src/offset_based_rewriter/: impls.rs  mod.rs
src/offset_calculator/: impls.rs  mod.rs
tests/: ci.rs  oob_span.rs
