[package]
name = "rewriter"
version = "0.1.1"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "Rust utilities for rewriting files"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/smoelius/rewriter"

[dependencies]
tempfile = "3.10"

proc-macro2 = { version = "1.0", features = [
    "span-locations",
], optional = true }

[dev-dependencies]
assert_cmd = "2.0"
ctor = "0.4"
regex = "1.0"

[features]
check-offsets = []
check-rewrites = []
proc-macro2-impl = ["proc-macro2"]
proc-macro2-span = ["proc-macro2-impl"]
__check-proc-macro2-spans = []

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing-errors-doc = "allow"
missing-panics-doc = "allow"
struct-field-names = "allow"

[lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/general" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/supplementary" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/collapsible_unwrap" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/const_path_join" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/misleading_variable_name" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/question_mark_in_expression" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/try_io_result" },
]
