[package]
name = "rewriter"
version = "0.2.1"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "Rust utilities for rewriting files"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/smoelius/rewriter"

[dependencies]
tempfile = "3.20"

proc-macro2 = { version = "1.0", features = [
    "span-locations",
], optional = true }

[dev-dependencies]
assert_cmd = "2.0"
ctor = "0.6"
regex = "1.11"

[features]
check-offsets = []
check-rewrites = []
proc-macro2-impl = ["proc-macro2"]
proc-macro2-span = ["proc-macro2-impl"]
__check-proc-macro2-spans = []

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing-errors-doc = "allow"
missing-panics-doc = "allow"
struct-field-names = "allow"

[lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[[workspace.metadata.dylint.libraries]]
git = "https://github.com/trailofbits/dylint"
pattern = [
    "examples/general",
    "examples/supplementary",
    "examples/restriction/collapsible_unwrap",
    "examples/restriction/const_path_join",
    "examples/restriction/misleading_variable_name",
    "examples/restriction/question_mark_in_expression",
    "examples/restriction/try_io_result",
]
